DynamicList is now a sub class of enyo.Scroller

--- a/onyx/css/DynamicList.css
+++ b/onyx/css/DynamicList.css
@@ -1,5 +1,4 @@
-.onyx-dynamiclist-scroller {
-	height:100%;
+.onyx-dynamiclist {
 	background-color: #e8e8e8;
 }
 
@@ -8,6 +7,7 @@
 	border-top: 1px solid #f4f4f4;
 	border-bottom: 1px solid #d4d4d4;
 	padding: 8px;
+	box-sizing: border-box;
 }
 
 .onyx-dynamiclist-row:active {
