Update GitHub page for DynamicList

--- a/onyx/css/DynamicList.css
+++ b/onyx/css/DynamicList.css
@@ -8,6 +8,7 @@
 	border-top: 1px solid #f4f4f4;
 	border-bottom: 1px solid #d4d4d4;
 	padding: 8px;
+	box-sizing: border-box;
 }
 
 .onyx-dynamiclist-row:active {
